@@ -499,8 +499,8 @@ setup_logfiles (char *var, struct buffer **to_server_p,
 	 (currently used by update.c), then the last set of logfiles will
 	 overwrite the others.  There is currently no way around this.  */
       strcpy (p, ".in");
-      fp = open_file (buf, "wb");
-      if (fp == NULL)
+      fp = fopen (buf, "wb");
+      if (!fp)
 	error (0, errno, "opening to-server logfile %s", buf);
       else
 	*to_server_p = log_buffer_initialize (*to_server_p, fp,
@@ -511,8 +511,8 @@ setup_logfiles (char *var, struct buffer **to_server_p,
 					      false, NULL);
 
       strcpy (p, ".out");
-      fp = open_file (buf, "wb");
-      if (fp == NULL)
+      fp = fopen (buf, "wb");
+      if (!fp)
 	error (0, errno, "opening from-server logfile %s", buf);
       else
 	*from_server_p = log_buffer_initialize (*from_server_p, fp,
